# Squires-Way

./: .cursorignore  AGENTS.md  Cargo.toml  LICENCE  README.md  SquiresWay.code-workspace
.cursor/: settings.json
.cursor/hooks/state/: continual-learning-index.json
.cursor/rules/: rust-os-boundaries.mdc  use-memstate-memory.mdc
.cursor/skills/analyze-csharp-conversion-parts/: SKILL.md
.cursor/skills/convert-csharp-rust/: SKILL.md  examples.md  reference.md
.cursor/skills/document-codebase/: SKILL.md  config-template.yaml  reference.md  setup-irony-mod-manager.md
.research/: csharp-rust-migration-best-practices-2025-03-17.md
assets/locales/: en.json
docs/architecture/: index.md  toc.yml
docs/architecture/combined/: toc.yml
docs/conversion-parts/: conversion-parts.yaml  dependency-graph.md
docs/plans/: csharp-rust-conversion-workflow.md
docs/summaries/: io-storage-conversion-session-20260403.md
src/: lib.rs  main.rs
src/app/: mod.rs
src/core/: enums.rs  mod.rs  models.rs  version.rs
src/di/: bootstrap.rs  error.rs  message_bus.rs  mod.rs
src/game/: args.rs  constants.rs  coordinator.rs  launch.rs  mod.rs  steam_env.rs
src/io/: constants.rs  error.rs  json.rs  mod.rs  path_ops.rs
src/localization/: current_locale.rs  error.rs  json_merge.rs  json_path.rs  manager.rs  mod.rs  resource_provider.rs
src/merging/: format_code.rs  merge_top_level.rs  mod.rs  parser_merger.rs
src/platform/: clipboard.rs  configuration.rs  linux_display.rs  mod.rs
src/services/: integration.rs  merge.rs  mod.rs
src/storage/: error.rs  mod.rs  paths.rs
(+40 files in other folders)
