[package]
name = "SquiresWay"
version = "0.1.0"
edition = "2024"

[dependencies]
# —— UI (Bevy + egui: cross-platform desktop, Windows/macOS/Linux) ——
bevy = "0.18"
bevy_egui = "0.39"

# —— Parsing: Paradox (CK3, EU4, HOI4, Vic3, etc.) save/game files ——
jomini = { version = "0.34", features = ["envelope"] }

# —— Serialization (multi-OS standard) ——
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# —— Paths & filesystem (XDG / Windows / macOS conventions) ——
directories = "6"
dirs = "6"
walkdir = "2"
tempfile = "3"
zip = "2"

# —— Database (SQLite: portable, no server) ——
rusqlite = { version = "0.32", features = ["bundled"] }

# —— Async & logging (cross-platform) ——
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitflags = { version = "2", features = ["serde"] }
once_cell = "1"
regex = "1"
thiserror = "2"
